fix nav overflow mobile

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,8 @@
 nav {
     background: rgba(0, 0, 0, 0.3);
     width: max-content;
+    max-width: calc(100vw - 2rem); 
+    overflow: hidden;              
     display: block;
     padding: 0.7rem 1.7rem;
     z-index: 2;
